# Go/domain/dto/invoice_dto.go
@@ -4,17 +4,22 @@ import (
 	"backend/domain/enum"
 	"backend/domain/model"
 	"fmt"
+	"time"
 )
 
 type InvoiceRepo_GetListParams struct {
-	PaymentType *enum.InvoicePaymentType
-	Query       *string
-	QueryBy     *string // leave empty to query by all
-	Page        *int
-	Limit       *int
-	SortOrder   *enum.SortOrder
-	SortBy      *string
-	DoCount     bool
+	CreatedAt_gte *time.Time
+	CreatedAt_lte *time.Time
+	Date_gte      *time.Time
+	Date_lte      *time.Time
+	PaymentType   *enum.InvoicePaymentType
+	Query         *string
+	QueryBy       *string // leave empty to query by all
+	Page          *int
+	Limit         *int
+	SortOrder     *enum.SortOrder
+	SortBy        *string
+	DoCount       bool
 }
 
 func (params *InvoiceRepo_GetListParams) Validate() error {
@@ -102,6 +107,8 @@ type GetInvoiceByUUIDRespData struct {
 }
 
 type GetInvoiceListReq struct {
+	DateFrom    *string                  `form:"date_from" binding:"omitempty"`                      // DD-MM-YYYY
+	DateTo      *string                  `form:"date_to" binding:"omitempty"`                        // DD-MM-YYYY
 	PaymentType *enum.InvoicePaymentType `form:"payment_type" binding:"omitempty,oneof=CASH CREDIT"` // leave empty to query all payment types
 	Query       *string                  `form:"query" binding:"omitempty"`
 	QueryBy     *string                  `form:"query_by" binding:"omitempty,oneof=invoice_no customer_name sales_person_name"` // leave empty to query by all queriable fields
